# smart-school-erp

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  h  package.json
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20260604_0001_initial_schema.py  20260604_0002_auth_sessions.py
apps/backend/src/smart_school/: __init__.py  app.py  main.py
apps/backend/src/smart_school/ai_review/: __init__.py  crud.py  schemas.py  services.py
apps/backend/src/smart_school/api/: __init__.py
apps/backend/src/smart_school/attendance/: __init__.py  crud.py  schemas.py  services.py
apps/backend/src/smart_school/auth/: __init__.py  crud.py  dependencies.py  schemas.py  security.py
apps/backend/src/smart_school/core/: __init__.py  config.py
apps/backend/src/smart_school/db/: __init__.py  session.py
apps/backend/src/smart_school/gamification/: __init__.py  crud.py  schemas.py  services.py
apps/backend/src/smart_school/models/: __init__.py  ai_reporting.py  ai_review.py  attendance.py  audit.py  auth.py  common.py  enums.py  gamification.py  identity.py  mixins.py  notifications.py  outbox.py  people.py  scheduling.py  school.py  sync.py  tenant.py
apps/backend/src/smart_school_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/tests/: test_api_app.py  test_attendance_api.py  test_auth_security.py  test_database_metadata.py  test_migrations.py  test_new_routers.py  test_parents_api.py  test_seed_data.py  test_students_api.py  test_teachers_api.py
(+106 files in other folders)
