[project]
name = "smart-school-backend"
version = "0.1.0"
description = "FastAPI backend for Smart School Cloud ERP."
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.17.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "pgvector>=0.4.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy[asyncio]>=2.0.40",
  "uvicorn[standard]>=0.35.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.13.0"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
